--- a/localisation/cal_disaster_events_l_english.yml
+++ b/localisation/cal_disaster_events_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  cal_disaster.1.t: "Illegitimate Caliph"
- cal_disaster.1.d: "[Root.Monarch.GetTitle] [Root.Monarch.GetName] has lost the support of the poeple. [Root.Monarch.GetSheHeCap] ..."
+ cal_disaster.1.d: "[Root.Monarch.GetTitle] [Root.Monarch.GetName] has lost the support of the poeple. [Root.Monarch.GetSheHeCap] can no longer claim to be the spiritual leader of Islam.\nThe people demand that the [Root.Monarch.GetTitle] step down in order to make way for a republic, deriving legitimacy from the people, not from god."
  cal_disaster.1.a: "The [Root.Monarch.GetTitle] will prevail!"
  cal_disaster.1.b: "The Caliphate is dead!"
  cal_disaster.2.t: "Blame it on the [genocide_province.Culture.GetName] people"
@@ -8,7 +8,7 @@
  cal_disaster.2.a: "Give the poeple a scapegoat"
  cal_disaster.2.b: "We must prevent further bloodshed"
  cal_disaster.3.t: "Blame it on the Armenians"
- cal_disaster.3.d: "TODO"
+ cal_disaster.3.d: "The Armenian genocide was the systematic mass murder of around one million ethnic Armenians from Anatolia ruled by the Ottoman empire and its ruling party, the Committee of Union and Progress.\nDuring times of enemy invasions in the Caucasus and the Persian regions, Ottoman paramilitaries massacered local Armenians. Massacres turned into Genocide after the Ottomans suffered a catastrophic defeat, a loss blamed on Armenian treachery. Ottoman leaders took isolated indications of Armenian restistance as evidence of a widespread conspiracy, even though no such thing existed. Mass deprtation was inteded as the 'definitive solution to the Armenian Question* and Armenian solders in the army were disarmed and later killed. Hundreds of Armenian intellectuals and community leaders were arrested and deported from Constantinople.\nOver one million Armenians were killed during these events and two millenia of Armenian civilization in Asia minor were destroyed, enabling the establishment of an ethnonational Turkish state."
  cal_disaster.3.a: "Give the poeple a scapegoat"
  cal_disaster.3.b: "We must prevent further bloodshed"
  cal_warning_genocide: "§RCommiting genocide can have consequences in the future, should our atrocities be made public§!"
@@ -17,28 +17,28 @@
  cal_disaster.4.a: "Purge the traitors"
  cal_disaster.4.b: "Pardon them"
  cal_disaster.5.t: "Support in province"
- cal_disaster.5.d: "TODO"
+ cal_disaster.5.d: "Local support for [Root.Ruler.GetName] keeps growing among the people as peasants and nobles alike rally to our banner!"
  cal_disaster.5.a: "This is most welcomed"
  cal_disaster.6.t: "Bureaucrats disgruntled"
- cal_disaster.6.d: "TODO"
+ cal_disaster.6.d: "The bureaucratic administrators have so far stood by [Root.Ruler.GetName], expecting to be generously rewarded. But there is a growing opinion among many of them that there has so far been little recognition of their loyalty."
  cal_disaster.6.a: "These gifts should show our gratitude"
  cal_disaster.6.b: "It is their duty!"
  cal_disaster.7.t: "Desertions"
- cal_disaster.7.d: "TODO"
+ cal_disaster.7.d: "War exhaustion in the form of plague and starvation is not only affecting the civilian population but our armed forces as well and the number of deserters keeps growing."
  cal_disaster.7.a: "There is nothing we can do"
  cal_disaster.7.b: "Increase their pay"
  cal_disaster.7.c: "Let them take from the peasants"
  cal_disaster.8.t: "Large revolt!"
- cal_disaster.8.d: "TODO"
- cal_disaster.8.a: "Sened money to help local authorities"
+ cal_disaster.8.d: "Many of those who have been forced to flee the country during the Civil War have sought refuge in the countryside and the local authorities report rumors that an armed rising might be imminent. If we do not stop this, we will end up with a stronghold there, providing support for further insurrection."
+ cal_disaster.8.a: "Send money to help local authorities"
  cal_disaster.8.b: "Crush them!"
  cal_disaster.9.t: "Separatist movements"
- cal_disaster.9.d: "TODO"
+ cal_disaster.9.d: "The ongoing Civil War has given rise to many opportunistic separatist movement, who seek to our weakend state to gain independence.\nIf it comes to a coordinated uprising the local authorities will not be able to contain the insurgents."
  cal_disaster.9.a: "Sened money to help local authorities"
  cal_disaster.9.b: "Crush them!"
  cal_disaster.10.t: "Greek independence movement"
- cal_disaster.10.d: "TODO"
- cal_disaster.10.a: "Sign the treaty of Constantinople"
+ cal_disaster.10.d: "The 'Greek War of Independence' was the succesful struggle of independence by Greek revolutionaries against the Ottoman empire. The Greeks were assisted by Great Britain, France and Russia. The war led to the formation of modern Greece. The almost ten year long struggle resluted in the Treaty of Constantinople, ceding southern Greece up until the Arta-Volos borderline and establishing an independent Kingdom of Greece.\nThe leaders of the revolt have taken up negotiations and offered a compromise: Restoring Greece as a sovereign state under our vassalage. While such an act could make us seem as weak, it would also prevent our troops from getting bogged down in a prolonged struggle with the sparatists and would pacify the Greek population by fairly minor concessions."
+ cal_disaster.10.a: "Sign the Compromise of Constantinople"
  cal_disaster.10.b: "Greek wars of independence"
  cal_disaster.100.t: "Order restored"
  cal_disaster.100.d: "The struggle for power is finally over as [Root.Monarch.GetName] and [Root.Monarch.GetHerHis] supporters have crushed the opposing faction and entrenched their prefered type of government."
@@ -52,8 +52,8 @@
  cal_disaster.101.a: "Religion should must be a right, but never an obligation."
  cal_disaster.101.b: "Religion has brought us nothing but misery. It must end now!"
  cal_disaster.101.c: "We should stay true to our traditions and religion."
- cal_disaster.201.t: "Young Turk rebelion"
- cal_disaster.201.d: "TODO"
+ cal_disaster.201.t: "Young Turk revolution"
+ cal_disaster.201.d: "The 'Young Turks' was a political reform movement that favored the replacement of the Ottoman empire's absolute monarchy with a contitutional government. Young Turks were a group of secular liberal intelectuals and revolutionaries, united in their opposition to the absolutist regime of the Sultan. Followig the detruction of the Caliphate, Mustafa Kemal Pasha Atatürk stirring up nationalist sentiment in Anatolia led to the collapse of the Ottoman empire and the establishment of the Turkish republic."
  cal_disaster.201.a: "The [Root.Monarch.GetTitle] will prevail. Crush those naive boys."
  cal_disaster.201.b: "The days of the caliphate are over. Atatürk will lead us into the future!"
  cal_disaster.202.t: "Order restored"
