--- a/localisation/cal_disaster_l_english.yml
+++ b/localisation/cal_disaster_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
  cal_illegitimate_caliph: "Illegitimate Caliph"
- desc_cal_illegitimate_caliph: "TODO"
+ desc_cal_illegitimate_caliph: "The people have lost faith in the rule of the Caliph and a struggle for power is brewing"
  cal_illegitimate_caliph_TUR: "Illegitimate Caliph"
- desc_cal_illegitimate_caliph_TUR: "TODO"
+ desc_cal_illegitimate_caliph_TUR: "The people have lost faith in the rule of the Caliph and a struggle for power is brewing"
