--- a/localisation/cal_events_l_english.yml
+++ b/localisation/cal_events_l_english.yml
@@ -17,25 +17,25 @@
  cal_flavor.5.b: "We will lead Islam into the future. In sch&amacr;' All&amacr;h!"
  cal_flavor.5.c: "We must protect our fellow Muslim bretheren."
  cal_flavor.6.t: "Rising support for Feminism"
- cal_flavor.6.d: "TODO"
+ cal_flavor.6.d: "After the fall of the calipahte and the establishment of a secular democratic state women's organizations have begun springing up demanding equal rights. This might be an opportunity to distance us from our past. Embracing the modern ideals of feminism. But it might not sit well with the more conversvative parts of our nation."
  cal_flavor.6.a: "Support the feminist ideas"
  cal_flavor.6.b: "The patriarchal structure has worked so far..."
  cal_flavor.7.t: "Outrage over the [genocide_province.Culture.GetName] genocide"
- cal_flavor.7.d: "TODO"
+ cal_flavor.7.d: "The atrocities that our government has commited deacdes ago have now come back to haunt us.\nMany countries have learned of the Genocide we commited in[genocide_province.GetAreaName] and its surroudning areas and now demand from us to acknoledge and apologize for it. Many agree with this sentiment, but parts of our administration also consider the measures taken were completely justified in the interests of national security."
  cal_flavor.7.a: "Accept national responibility for the genocide"
  cal_flavor.7.b: "Fervently deny the existence of the genocide"
  cal_flavor.7.c: "Commit the genocide again to show dominance"
  cal_flavor.8.t: "[genocide_province.Culture.GetName] Genocide forgotten"
- cal_flavor.8.d: "TODO"
- cal_flavor.8.a: "If noone will say something it's best we keep quiet about this"
+ cal_flavor.8.d: "The atrocities that our government has commited decades ago have not been acknoledged by any other nation. Our fear that we would be shunned for our actions were unfounded. Apparently our enemies are too much preoccupied in their own squabbles to care about our actions."
+ cal_flavor.8.a: "If noone will say something it's best we keep quiet about this."
  cal_flavor.9.t: "Outrage over the Armenian genocide"
- cal_flavor.9.d: "TODO"
+ cal_flavor.9.d: "The atrocities that our government has commited deacdes ago have now come back to haunt us.\nMany countries have learned of the Genocide we commited against the Armenians and now demand from us to acknoledge and apologize for it. Many agree with this sentiment, but parts of our administration also consider the measures taken against the Armenians were completely justified in the interests of national security."
  cal_flavor.9.a: "Accept national responibility for the genocide"
  cal_flavor.9.b: "Fervently deny the existence of the genocide"
  cal_flavor.9.c: "Commit the genocide again to show dominance"
  cal_flavor.10.t: "Province renounces religion"
- cal_flavor.10.d: "TODO"
+ cal_flavor.10.d: "Our people have finally been enlightend and realised the futility and backwardsness of their religious practises and have choosen to abandon their foolish notions god and faith. The money and resources wasted on religious practises can now be used to advance society."
  cal_flavor.10.a: "They have seen the light"
  cal_flavor.11.t: "$PROVINCENAME$ renounces religion"
- cal_flavor.11.d: "TODO"
+ cal_flavor.11.d: "The people of $PROVINCENAME$ have finally been enlightend and realised the futility and backwardsness of their religious practises and have choosen to abandon their foolish notions god and faith. The money and resources wasted on religious practises can now be used to advance society."
  cal_flavor.11.a: "They have been enlightened"
