--- a/localisation/cal_government_l_english.yml
+++ b/localisation/cal_government_l_english.yml
@@ -1,11 +1,11 @@
 ﻿l_english:
  cal_caliphate_reform: "Caliphate"
- cal_caliphate_reform_desc: "TODO"
+ cal_caliphate_reform_desc: "We have adopted the title of Caliph not just as a religious title, as spiritual leader of Islam, but also as a worldly title and govern our lands as such."
  cal_religous_state_reform: "Religious state"
- cal_religous_state_reform_desc: "TODO"
+ cal_religous_state_reform_desc: "Religion is not just what holds our society together, but also our nation. Islamic laws are the only true laws that must be observed and our legal system must be built around them."
  cal_atheist_republic_reform: "Atheist Republic"
- cal_atheist_republic_reform_desc: "TODO"
+ cal_atheist_republic_reform_desc: "We have left the archaic notions of a religious state behind us. All are equal, no matter what they believe in, not who they are."
  cal_religious_freedom_reform: "Religious freedom"
- cal_religious_freedom_reform_desc: "TODO"
+ cal_religious_freedom_reform_desc: "Religion must be a right! Everone should be free to practice whatever faith they believe true."
  cal_laicite_reform: "Laïcité Ideals"
- cal_laicite_reform_desc: "TODO"
+ cal_laicite_reform_desc: "Religion has brought nothing but misery! Noone should be subject to a law justified solely by religion."
