--- a/localisation/cal_ideas_l_english.yml
+++ b/localisation/cal_ideas_l_english.yml
@@ -2,34 +2,34 @@
  ANA_ideas: "Turkish Ideas"
  ANA_ideas_start: "Turkish Traditions"
  ANA_ideas_bonus: "Turkish Ambitions"
- ana_modern_military: "Modern Military"
- ana_modern_military_desc: "TODO"
+ ana_modern_military: "Atatürks military reforms"
+ ana_modern_military_desc: "After the collapse of the Ottomans, Atatürk reformed and modernized the Turkish army to ensure the security of the young nationstate."
  ana_urbanization: "Urbanization"
- ana_urbanization_desc: "TODO"
+ ana_urbanization_desc: "After the fall of the Ottoman empire, Turkey entered an era of rapid westernization and modernization of the agricultural sector. This freed up many laborer to work in other secotrs of the indutry."
  ana_laicite: "Laïcité"
- ana_laicite_desc: "TODO"
+ ana_laicite_desc: "Wheras Secularism will demand freedom of religion, Laicism demand freedom from religion. It is the strict seperation of state and religion, where no policy or law may be influence or justified by a religious belief and public officials are not allowed to display religious symbols in their place of work."
  ana_economic_relations: "Economic relations"
- ana_economic_relations_desc: "TODO"
+ ana_economic_relations_desc: "Atatürk sought to seek relations with the Western nations and with the sectors of industry modernized, Turkey proved to be an economicly influencal trade power."
  ana_turkification: "Turkification"
- ana_turkification_desc: "TODO"
+ ana_turkification_desc: "In an attempt to forge a new national identity, after Islam as a unifying factor was abandoned, Turkification was an attempt to create an ethnically unified nation. This process consisted in the adoption of Turkish language and culture in a all provinces and nationalst policies towards ethnic minorities."
  ana_military_oversight: "Military oversight"
- ana_military_oversight_desc: "TODO"
+ ana_military_oversight_desc: "The military was planned as a counterweight to the civil government. As a last resort should the government abandon its values of secularism and democracy. This proved to be beneficial in the early years when military coup d'etats futher democartized the country, but it later also lead the military becoming a strong influence on the government with the threat of a coup d'etat being a constant factor."
  ana_state_sponsored_universities: "State universities"
- ana_state_sponsored_universities_desc: "TODO"
+ ana_state_sponsored_universities_desc: "In an effort to increase literacy in the counry and creating a young intellectual elite, the early Turkish republic invested heavily into their educaton system. Opening many public universities all across the country."
  ISS_ideas: "Caliphal state Ideas"
  ISS_ideas_start: "Caliphal state Traditions"
  ISS_ideas_bonus: "Caliphal state Ambitions"
  iss_global_jihad: "Global Jihad"
- iss_global_jihad_desc: "TODO"
+ iss_global_jihad_desc: "As the true successors to Muhammed it is our duty to spread the ways of Islam to all the unbelievers."
  iss_jizya: "Jizya tax"
- iss_jizya_desc: "TODO"
+ iss_jizya_desc: "The jizya tax a taxation levied from non-muslim male subjects, the Dhimmi, according to islamic law."
  iss_muslim_values: "Muslim values"
- iss_muslim_values_desc: "TODO"
+ iss_muslim_values_desc: "We must keep true to our traditional muslim values in order to ensure a stable and safe society, now and in the future."
  iss_harem: "Caliphal Harem"
- iss_harem_desc: "TODO"
+ iss_harem_desc: "The harem refers to the domestic spaces reserved for the woman of the house in a muslim family. This space houses wifes, children, unmarried daughters and female servants as well as concubines."
  iss_one_faith_one_people: "One faith, one people"
- iss_one_faith_one_people_desc: "TODO"
+ iss_one_faith_one_people_desc: "A nation must be unified by faith and tradition."
  iss_religious_oversight: "Religious oversight"
- iss_religious_oversight_desc: "TODO"
+ iss_religious_oversight_desc: "The Ulema, our religious scholars educated in traditional Islamic law, are one of pillars holing our nation and society together. In a state dominated by religion they naturally hold a lot of power."
  iss_mulsim_golden_age_revisited: "Golden Age revived"
- iss_mulsim_golden_age_revisited_desc: "TODO"
+ iss_mulsim_golden_age_revisited_desc: "The original Islamic Golden age was a period of clutural, economic and scientific flourishing in the Islamic parts of the world from the 8th to 13th century during the Abbasid caliphate's reign. During this time Baghdad was the center of the world and Muslim lands the most advanced and developed. We seek to revive this legacy and usher in a new Golden Age for Islam."
