--- a/localisation/cal_modifiers_l_english.yml
+++ b/localisation/cal_modifiers_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  cal_is_caliph: "Is Caliph"
- desc_cal_is_caliph: "TODO"
+ desc_cal_is_caliph: "This nation is the caliph or is the succesor state of the Caliphate."
  cal_caliphate_sunni: "Sunni Caliphate"
  desc_cal_caliphate_sunni: "We are the secular leader of all the Sunni muslims. It is now our duty to protect them and lead them into the future, as well as being a beacon of faith and piety."
  cal_caliphate_shia: "Shia Caliphate"
@@ -12,7 +12,7 @@
  cal_caliphate_destroyed: "Caliphate destroyed"
  desc_cal_caliphate_destroyed: "We have rid the world of the imposter Caliph and showed him the error of his way."
  cal_caliphate_transcended: "Caliphate trancended"
- desc_cal_caliphate_transcended: "TODO"
+ desc_cal_caliphate_transcended: "We have become more enlightened and have left the archaic ways of the caliphate behind us."
  cal_is_caliph_tooltip: "Is Caliph"
  cal_not_defender: "Caliph is not the Defender of the Faith"
  desc_cal_not_defender: "Another country has taken it upon them to call themselves the Defender of the Faith. A duty that should be carried out by the Caliph. Should this continue, it could have serious repercussions for our legitimacy."
@@ -27,17 +27,17 @@
  cal_protector_caliphate: "Protector of Islam"
  desc_cal_protector_caliphate: "We must look to our bretheren that we have sworn to protect from heathen invaders."
  cal_feminism: "Feminism"
- desc_cal_feminism: "TODO"
+ desc_cal_feminism: "Following the destruction of the Caliphate and the old archaic ways we must ensure that everyone has equal rights."
  cal_patriarchy: "Patriarchy"
- desc_cal_patriarchy: "TODO"
+ desc_cal_patriarchy: "Even though the Caliphate and its archaic ways have been vanquished, we must ensure the traditional familial structure to ensure the stability of society."
  cal_genocide_province: "Genocided Province"
- desc_cal_genocide_province: "TODO"
- cal_concessions_to_soldiers: "Increase pay for the soldiers"
- desc_cal_concessions_to_soldiers: "TODO"
+ desc_cal_genocide_province: "This province has been the target of massacres and deportations aimed at eliminating the local culture."
+ cal_concessions_to_soldiers: "Increased pay for the soldiers"
+ desc_cal_concessions_to_soldiers: "In order to keep our soldiers from deserting we have increased their pay to ensure their continued support"
  cal_genocide_accepted: "Genocide accepted"
- desc_cal_genocide_accepted: "TODO"
+ desc_cal_genocide_accepted: "Our government has formally accepted the atrocites it has commited in the past."
  cal_genocide_denied: "Genocide denied"
- desc_cal_genocide_denied: "TODO"
+ desc_cal_genocide_denied: "Our government fervently maintains the stance that all atrocities commited in the past were justified."
  harmonized_cal_christian: "Chritians Harmonized"
  harmonized_cal_muslim: "Muslims Harmonized"
  harmonized_cal_buddhism: "Buddhists Harmonized"
