--- a/localisation/cal_disaster_events_l_english.yml
+++ b/localisation/cal_disaster_events_l_english.yml
@@ -17,10 +17,10 @@
  cal_disaster.4.a: "Purge the traitors"
  cal_disaster.4.b: "Pardon them"
  cal_disaster.5.t: "Support in province"
- cal_disaster.5.d: "Local support for [Root.Ruler.GetName] keeps growing among the people as peasants and nobles alike rally to our banner!"
+ cal_disaster.5.d: "Local support for [Root.Monarch.GetName] keeps growing among the people as peasants and nobles alike rally to our banner!"
  cal_disaster.5.a: "This is most welcomed"
  cal_disaster.6.t: "Bureaucrats disgruntled"
- cal_disaster.6.d: "The bureaucratic administrators have so far stood by [Root.Ruler.GetName], expecting to be generously rewarded. But there is a growing opinion among many of them that there has so far been little recognition of their loyalty."
+ cal_disaster.6.d: "The bureaucratic administrators have so far stood by [Root.Monarch.GetName], expecting to be generously rewarded. But there is a growing opinion among many of them that there has so far been little recognition of their loyalty."
  cal_disaster.6.a: "These gifts should show our gratitude"
  cal_disaster.6.b: "It is their duty!"
  cal_disaster.7.t: "Desertions"
